<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.QuizActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/add_new_entry_heading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/quiz_heading"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

    <ImageView
        android:id="@+id/quiz_image_current"
        android:layout_width="262dp"
        android:layout_height="215dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/quiz_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Quiz_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/quiz_question"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_image_current"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/Quiz_radiogroup_answers"
        android:layout_width="286dp"
        android:layout_height="184dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Quiz_question"
        app:layout_constraintVertical_bias="0.046">

        <RadioButton
            android:id="@+id/quiz_button_answerA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_default_answer_a" />

        <RadioButton
            android:id="@+id/quiz_button_answerB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_default_answer_b" />

        <RadioButton
            android:id="@+id/quiz_button_answerC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quiz_default_answer_c" />
    </RadioGroup>

    <Button
        android:id="@+id/quiz_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_submit_button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Quiz_radiogroup_answers"
        app:layout_constraintVertical_bias="0.165" />

    <Button
        android:id="@+id/quiz_quit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_quit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_submit_button"
        app:layout_constraintVertical_bias="0.195" />

</androidx.constraintlayout.widget.ConstraintLayout>